<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.SignUp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/sign_up"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up_with"
        android:textStyle="bold|italic"
        android:textSize="17sp"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_edit_texts"
        android:padding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edit_texts"
        android:padding="10dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/edtIMEI"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_texts"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/imei_number"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:textSize="16sp"
        android:enabled="false"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_texts"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/edtConfirmPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_texts"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:background="@drawable/bg_button_sign_in"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#FFF"/>

</LinearLayout>
