<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/request_location"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_texts"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:textColor="@color/colorPrimary"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:textSize="16sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <Button
            android:id="@+id/btnCacnel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="?android:attr/buttonBarStyle"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="#FFF"
            android:onClick=""/>

        <Button
            android:id="@+id/btnRequest"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="?android:attr/buttonBarStyle"
            android:background="@color/colorPrimary"
            android:text="@string/send_request"
            android:textColor="#FFF"/>

    </LinearLayout>

</LinearLayout>