<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.SignIn">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/sign_in"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_texts"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimary"
        android:hint="@string/username_text"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_texts"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimary"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:textSize="16sp"/>


    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_margin="15dp"
        android:background="@drawable/bg_button_sign_in"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="#FEE264"/>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold|italic"
            android:textSize="15sp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"/>

    </LinearLayout>

</LinearLayout>
