<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:title="Logout"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_texts"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_texts"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimary"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:textSize="16sp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <Button
            android:id="@+id/btnCacnel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="?android:attr/buttonBarStyle"
            android:background="@color/colorPrimary"
            android:text="@string/cancel"
            android:textColor="#FFF"/>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="?android:attr/buttonBarStyle"
            android:background="@color/colorPrimary"
            android:text="@string/logout"
            android:textColor="#FFF"/>

    </LinearLayout>

</LinearLayout>